cmake_minimum_required(VERSION 3.24)
project(lab2_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab2_1 main.cpp)
add_executable(lab2_2 main2.cpp)
add_executable(lab2_3 main3.cpp)
add_executable (lab2_4 main4.cpp)
add_executable (lab2_5 main5.cpp)
add_executable (lab2_6 main6.cpp)
add_executable (lab2_7 main7.cpp)
add_executable (lab2_8 main8.cpp)
add_executable (lab2_9 main9.cpp)
add_executable (lab2_10 main10.cpp)
add_executable (lab2_11 main11.cpp)
add_executable (lab2_12 main12.cpp)
add_executable (lab2_13 main13.cpp)
add_executable (lab2_14 main14.cpp)
add_executable (lab2_15 main15.cpp)
add_executable (lab2_16 main16.cpp)
add_executable (lab2_17 main17.cpp)
add_executable (lab2_18 main18.cpp)
add_executable (lab2_19 main19.cpp)
add_executable (lab2_20 main20.cpp)
